Fix styling of gram-action alignment on index page

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -90,6 +90,7 @@ input {
   font-weight: bold;
   font-size: 16px;
   margin-right: 20px;
+  margin-left: auto;
 }
 
 .comments {
